--- a/webapp/jex01.html
+++ b/webapp/jex01.html
@@ -17,9 +17,11 @@
 </body>
 
 <script type="text/javascript">
-	$('#btn').on("click", function(){
+
+	//jquery로 html 해석하기
+	$('#btn').on("click", function(){//$('#id').on("이벤트", 발생하는 변화)
 		console.log("버튼 클릭");
-		$("#display").html('<font color="red">홍길동<font>');
+		$("#display").html('<font color="red">홍길동<font>');//$('#id').html('html 문법')
 	}); //btn을 click 할 때(이벤트), function(발생) 
 </script>
 
